--- a/package.json
+++ b/package.json
@@ -42,12 +42,8 @@
   "files": [
     "dist"
   ],
-  "peerDependencies": {
-    "webpack": "^5.0.0"
-  },
   "dependencies": {
-    "html-minifier-terser": "^7.2.0",
-    "parse5": "^7.1.2"
+    "parse5": "^7.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -55,7 +51,6 @@
     "@babel/preset-env": "^7.25.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "cspell": "^8.13.1",
@@ -66,7 +61,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "handlebars": "^4.7.8",
-    "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.8",
@@ -76,8 +70,7 @@
     "posthtml-webp": "^2.2.0",
     "prettier": "^3.3.3",
     "standard-version": "^9.5.0",
-    "unescape-unicode": "^0.2.0",
-    "webpack": "^5.93.0"
+    "unescape-unicode": "^0.2.0"
   },
   "keywords": [
     "webpack",
